{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1049,
  "lineage": "22349216-f2ab-4e28-c2a4-8d42a2d80bd8",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:security-group/sg-0a88e0b2831a677ea",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0a88e0b2831a677ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f85d46f6294379aa"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "skyworkz-k8s-training-9lLoxykW-cluster-20231108163317242300000004",
            "name_prefix": "skyworkz-k8s-training-9lLoxykW-cluster-",
            "owner_id": "267074127319",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-cluster"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:security-group/sg-0f85d46f6294379aa",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f85d46f6294379aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=af0dc9f6bb7d5443dabec26253aa5f92",
                "from_port": 30447,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30447
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=af0dc9f6bb7d5443dabec26253aa5f92",
                "from_port": 32158,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32158
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/mtu",
                "from_port": 3,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 4
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.2.0/24",
                  "10.0.1.0/24"
                ],
                "description": "kubernetes.io/rule/nlb/health=af0dc9f6bb7d5443dabec26253aa5f92",
                "from_port": 30231,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30231
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a88e0b2831a677ea"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a88e0b2831a677ea"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a88e0b2831a677ea"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a88e0b2831a677ea"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a88e0b2831a677ea"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a88e0b2831a677ea"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "skyworkz-k8s-training-9lLoxykW-node-20231108163317242300000005",
            "name_prefix": "skyworkz-k8s-training-9lLoxykW-node-",
            "owner_id": "267074127319",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-node",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "owned"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-node",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1005287732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a88e0b2831a677ea",
            "security_group_rule_id": "sgr-0a60e2532ae650b40",
            "self": false,
            "source_security_group_id": "sg-0f85d46f6294379aa",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-215624021",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f85d46f6294379aa",
            "security_group_rule_id": "sgr-06cf45545829526e3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1044116210",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85d46f6294379aa",
            "security_group_rule_id": "sgr-049c075e55004bee8",
            "self": false,
            "source_security_group_id": "sg-0a88e0b2831a677ea",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3704037869",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85d46f6294379aa",
            "security_group_rule_id": "sgr-0d8f377c26e47f4dd",
            "self": false,
            "source_security_group_id": "sg-0a88e0b2831a677ea",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-361055867",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85d46f6294379aa",
            "security_group_rule_id": "sgr-049842f1d6f2897b4",
            "self": false,
            "source_security_group_id": "sg-0a88e0b2831a677ea",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-114915930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85d46f6294379aa",
            "security_group_rule_id": "sgr-0e8fb3647b7d7352a",
            "self": false,
            "source_security_group_id": "sg-0a88e0b2831a677ea",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1652050321",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85d46f6294379aa",
            "security_group_rule_id": "sgr-00225f526850f824b",
            "self": false,
            "source_security_group_id": "sg-0a88e0b2831a677ea",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3038878063",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85d46f6294379aa",
            "security_group_rule_id": "sgr-0ab26f2d078892caf",
            "self": false,
            "source_security_group_id": "sg-0a88e0b2831a677ea",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3706684740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85d46f6294379aa",
            "security_group_rule_id": "sgr-082ba185f3a708bcd",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3456102172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f85d46f6294379aa",
            "security_group_rule_id": "sgr-0109ef8fdfe4bf41f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1772113139",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f85d46f6294379aa",
            "security_group_rule_id": "sgr-09fb73497efb03a14",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:network-acl/acl-07d28b60da59a2b4d",
            "default_network_acl_id": "acl-07d28b60da59a2b4d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07d28b60da59a2b4d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "267074127319",
            "subnet_ids": [
              "subnet-01809d35b8683f64a",
              "subnet-03dca77aa6d3f882d",
              "subnet-05fb2491d23121e41",
              "subnet-0a5882753d1f82706",
              "subnet-0ba9b3fd18af9a89a",
              "subnet-0fc0be856700ff9a0"
            ],
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-default"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-default"
            },
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:route-table/rtb-04a3e8757d8578c85",
            "default_route_table_id": "rtb-04a3e8757d8578c85",
            "id": "rtb-04a3e8757d8578c85",
            "owner_id": "267074127319",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-default"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:security-group/sg-0a0542d6519ddb18c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a0542d6519ddb18c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "267074127319",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-default"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-default"
            },
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d9f606f110fad83",
            "association_id": "eipassoc-03a1346573278400c",
            "domain": "vpc",
            "id": "eipalloc-06d9f606f110fad83",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0d27a1bacd567b872",
            "private_dns": "ip-10-0-1-60.eu-west-1.compute.internal",
            "private_ip": "10.0.1.60",
            "public_dns": "ec2-99-81-167-211.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.81.167.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-eu-west-1a"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-eu-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:internet-gateway/igw-0ca82ffb8da65cb16",
            "id": "igw-0ca82ffb8da65cb16",
            "owner_id": "267074127319",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW"
            },
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d9f606f110fad83",
            "association_id": "eipassoc-03a1346573278400c",
            "connectivity_type": "public",
            "id": "nat-02ab275b0672f204e",
            "network_interface_id": "eni-0d27a1bacd567b872",
            "private_ip": "10.0.1.60",
            "public_ip": "99.81.167.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03dca77aa6d3f882d",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-eu-west-1a"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-eu-west-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06348427935ccd65f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02ab275b0672f204e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06348427935ccd65f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ca82ffb8da65cb16",
            "id": "r-rtb-01f33569aa7431a6d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f33569aa7431a6d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:route-table/rtb-06348427935ccd65f",
            "id": "rtb-06348427935ccd65f",
            "owner_id": "267074127319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02ab275b0672f204e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-private"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:route-table/rtb-01f33569aa7431a6d",
            "id": "rtb-01f33569aa7431a6d",
            "owner_id": "267074127319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca82ffb8da65cb16",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-public"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0608fef0208654da2",
            "route_table_id": "rtb-06348427935ccd65f",
            "subnet_id": "subnet-05fb2491d23121e41"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c295247951388c3",
            "route_table_id": "rtb-06348427935ccd65f",
            "subnet_id": "subnet-0ba9b3fd18af9a89a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2e375e123cf4113",
            "route_table_id": "rtb-06348427935ccd65f",
            "subnet_id": "subnet-0fc0be856700ff9a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0618bf771a9990ed6",
            "route_table_id": "rtb-01f33569aa7431a6d",
            "subnet_id": "subnet-03dca77aa6d3f882d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0857e9eb8857140e6",
            "route_table_id": "rtb-01f33569aa7431a6d",
            "subnet_id": "subnet-01809d35b8683f64a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a50204a4f57963b",
            "route_table_id": "rtb-01f33569aa7431a6d",
            "subnet_id": "subnet-0a5882753d1f82706"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-05fb2491d23121e41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fb2491d23121e41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-private-eu-west-1a",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-private-eu-west-1a",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-0ba9b3fd18af9a89a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba9b3fd18af9a89a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-private-eu-west-1b",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-private-eu-west-1b",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-0fc0be856700ff9a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc0be856700ff9a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-private-eu-west-1c",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-private-eu-west-1c",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-03dca77aa6d3f882d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dca77aa6d3f882d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-public-eu-west-1a",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-public-eu-west-1a",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-01809d35b8683f64a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01809d35b8683f64a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-public-eu-west-1b",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-public-eu-west-1b",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-0a5882753d1f82706",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5882753d1f82706",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-public-eu-west-1c",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW-public-eu-west-1c",
              "kubernetes.io/cluster/skyworkz-k8s-training-9lLoxykW": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ccb5b9a234de2dad"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:vpc/vpc-0ccb5b9a234de2dad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d28b60da59a2b4d",
            "default_route_table_id": "rtb-04a3e8757d8578c85",
            "default_security_group_id": "sg-0a0542d6519ddb18c",
            "dhcp_options_id": "dopt-0f91a3552ee41eee8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ccb5b9a234de2dad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a3e8757d8578c85",
            "owner_id": "267074127319",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-9lLoxykW"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}